added redis to the app
